--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
 	"devDependencies": {
 		"@babel/core": "^7.20.0",
 		"@types/react": "~18.3.12",
-		"eslint": "^9.14.0",
+		"@types/react-native": "^0.72.8",
+		"eslint": "^8.56.0",
 		"eslint-config-universe": "^14.0.0",
 		"prettier": "^3.3.3",
 		"typescript": "~5.3.3"
